# smog

./: .gitignore  BACKLOG.md  CHANGELOG.md  MANIFEST.in  README.md  README_CMDLINE.md  dbg_main.py  flake8.cfg  reqdev.txt  requirements.txt  run_autodoc.py  run_freeze.py  run_prep.py  run_qs_tool.sh  run_sample.py  run_upgrade.py  setup.cfg  setup.py
.github/: FUNDING.yml
smog/: __init__.py  __main__.py  colname.py  const.py  context.py  ctxflow.py  dbmedia.py  dbschema.py  examine.py  exif.py  file.py  file1name.py  gps.py  mediadb.py  memo.py  movefin.py  movepic.py  organize.py  smog.py  strutil.py  xmpex.py  xmptype.py
smog_alembic/: __init__.py  env.py
smogconvert/: __init__.py  adapter.py  conv2jpeg.py  convert.py  copyfile.py  ctxenv.py  ctxtempfile.py  pdfwatermark.py  penv.py  resize.py  stdout  strip.py  tempfile.py  thumbnail.py  watermark.py
tests/: test_default.py
tests/data/: memo-01.txt  memo-02.txt  memo-03.txt
