[metadata]
keywords = media, organizer, pictures, xmp
description = simple media organizer

long_description = file: README.md, CHANGELOG.md, BACKLOG.md, LICENSE.md
long_description_content_type = text/markdown

license = AGPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Multimedia
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

    